[project]
name = "tea-tasting"
dynamic = ["version"]
description = "A Python package for the statistical analysis of A/B tests."
authors = [
    {name = "Evgeny Ivanov", email = "ivanov.evgeny.n@gmail.com"},
]
dependencies = [
    "ibis-framework>=9",
    "narwhals>=1.4",
    "numpy>=1.25",
    "pyarrow>=16",
    "scipy>=1.11",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://tea-tasting.e10v.me"
documentation = "https://tea-tasting.e10v.me/user-guide"
source = "https://github.com/e10v/tea-tasting"
"release notes" = "https://github.com/e10v/tea-tasting/releases"


[dependency-groups]
docs = ["mkdocs-material", "mkdocstrings[python]"]
lint = ["markdown", "marimo", "pyright", "ruff"]
test = [
    "coverage[toml]>=7",
    "duckdb<1.4",
    "ibis-framework[duckdb,sqlite]",
    "marimo>=0.10",
    "pandas>=2",
    "polars>=1",
    "pytest>=8",
    "tqdm>=4",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.build]
excludes = ["src/_*/**/*"]
package-dir = "src"

[tool.pdm.scripts]
all.composite = ["doctest", "test", "cover", "lint", "type"]
all.keep_going = true
cover = "coverage report -m"
docserv = "mkdocs serve -w docs -w src -w mkdocs.yml"
doctest.cmd = [
    "pytest",
    "--doctest-continue-on-failure",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--ignore=examples/",
    "--ignore=tests/",
    "--ignore-glob=src/_*",
]
lint = "ruff check ."
test = "coverage run -m pytest"
type = "pyright"

[tool.pdm.version]
source = "scm"
write_to = "tea_tasting/_version.txt"


[tool.coverage.run]
source = ["src/tea_tasting"]
[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover", "@overload", "@abc.abstractmethod"]


[tool.ruff]
extend-exclude = ["examples"]
src = ["src"]

[tool.ruff.lint]
select = [
    "A", "ANN", "ARG", "B", "BLE", "C4", "C90", "COM", "D", "DOC", "E", "ERA",
    "F", "FA", "FBT", "FIX", "FLY", "FURB", "I", "ICN", "INP", "INT", "ISC",
    "N", "NPY", "PD", "PERF", "PGH", "PIE", "PL", "PT", "Q", "RET", "RSE",
    "RUF", "S", "SIM", "SLF", "SLOT", "T10", "T20", "TC", "TD", "TID", "TRY",
    "UP", "W",
]
ignore = ["ANN401", "PGH003", "SLF001", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/*" = [
    "ANN201", "D", "FBT003", "PLR2004", "PT001", "S101",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8


[tool.pyright]
exclude = ["examples", "**/node_modules", "**/__pycache__", "**/.*"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
