[project]
name = "tea-tasting"
dynamic = ["version"]
description = "A Python package for the statistical analysis of A/B tests."
authors = [
    {name = "Evgeny Ivanov", email = "ivanov.evgeny.n@gmail.com"},
]
dependencies = [
    "narwhals>=2.8",
    "numpy>=2.1",
    "pyarrow>=17",
    "scipy>=1.15",
    "sqlglot>=27.18",
]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://tea-tasting.e10v.me"
documentation = "https://tea-tasting.e10v.me/user-guide"
source = "https://github.com/e10v/tea-tasting"
"release notes" = "https://github.com/e10v/tea-tasting/releases"

[dependency-groups]
docs = ["mkdocs-material", "mkdocstrings[python]"]
lint = ["markdown", "marimo", "ruff", "ty"]
test = [
    "coverage[toml]>=7.14.1",
    "duckdb>=1.3",
    "ibis-framework[duckdb,sqlite]>=9",
    "marimo>=0.10",
    "pandas>=2.2",
    "polars>=1",
    "pytest>=9.0.3",
    "sqlframe[duckdb]>=3",
    "tqdm>=4.66",
]


[build-system]
requires = ["pdm-backend>=2.4,<3"]
build-backend = "pdm.backend"


[tool.pdm.build]
excludes = ["src/_*/**/*"]
package-dir = "src"

[tool.pdm.version]
source = "scm"
write_to = "tea_tasting/_version.txt"


[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "@overload",
    "@abc.abstractmethod",
    "^\\s*\\.\\.\\.\\s*$",
]
fail_under = 100

[tool.coverage.run]
source = ["src/tea_tasting"]


[tool.ruff]
extend-exclude = ["examples"]
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "A", "ANN", "ARG", "B", "BLE", "C4", "C90", "COM", "D", "DOC", "E", "ERA",
    "F", "FA", "FBT", "FIX", "FLY", "FURB", "I", "ICN", "INP", "INT", "ISC",
    "N", "NPY", "PERF", "PGH", "PIE", "PL", "PT", "Q", "RET", "RSE", "RUF", "S",
    "SIM", "SLF", "SLOT", "T10", "T20", "TC", "TD", "TID", "TRY", "UP", "W",
]
ignore = ["ANN401", "PGH003", "SLF001", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/*" = [
    "D", "FBT003", "PLR2004", "PT001", "S101",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8


[tool.ty.src]
include = ["src", "tests"]

[[tool.ty.overrides]]
include = ["tests"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"


[tool.uv]
exclude-newer = "7 days"


[tool.tombi]
schema.strict = false


[tool.poe]
executor = "uv"

[tool.poe.tasks]
ci.sequence = ["doctest", "test", "cover", "lint", "type"]
ci.ignore_fail = true
ci-docs.sequence = ["doctest-md", "markdownlint", "readme-check", "examples-check"]
ci-docs.ignore_fail = true
cover = "coverage report -m"
docserv = [
    { cmd = "python src/_internal/sync_readme.py" },
    { cmd = "mkdocs serve -w docs -w src -w mkdocs.yml" },
]
doctest = """pytest \
--doctest-continue-on-failure \
--doctest-glob=*.md \
--doctest-modules \
--ignore=examples/ \
--ignore=tests/ \
--ignore-glob=src/_*
"""
doctest-md = """pytest \
--doctest-continue-on-failure \
--doctest-glob=*.md \
--ignore=tests/ \
--ignore-glob=src/_*
"""
examples = "python src/_internal/sync_examples.py"
examples-check = "python src/_internal/sync_examples.py --check"
lint = "ruff check"
markdownlint = 'markdownlint-cli2 "*.md" "docs/*.md" "examples/*.md"'
readme = "python src/_internal/sync_readme.py"
readme-check = "python src/_internal/sync_readme.py --check"
reset = [
    { cmd = "git fetch origin main" },
    { cmd = "git switch dev" },
    { cmd = "git reset --hard origin/main" },
    { cmd = "git push --force-with-lease" },
]
test = "coverage run -m pytest"
type = "ty check"
upgrade = "uv sync --all-groups --upgrade"
